--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>microservice-eureka-server</module>
         <module>microservice-eureka-user</module>
+        <module>microservice-eureka-order</module>
     </modules>
 
     <parent>
