--- a/microservice-nacos-user/src/main/resources/application.yml
+++ b/microservice-nacos-user/src/main/resources/application.yml
@@ -10,3 +10,14 @@ spring:
         namespace: public  # 命名空间，默认为 public
         group: DEFAULT_GROUP  # 分组，默认为 DEFAULT_GROUP
         ephemeral: true  # 是否为临时实例
+    sentinel:
+      transport:
+        # Sentinel Dashboard 地址（需要单独部署）
+        dashboard: localhost:8080
+        # 服务与控制台交互的端口
+        port: 8719
+      # 开启对 Spring MVC 端点的保护
+      filter:
+        enabled: true
+      # 取消控制台懒加载
+      eager: true
