--- a/microservice-nacos-order/pom.xml
+++ b/microservice-nacos-order/pom.xml
@@ -45,6 +45,26 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
         </dependency>
+
+        <!-- 1. 添加 OpenFeign 依赖 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
+        <!-- 2. 添加 HTTP 客户端实现（性能更好） -->
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-httpclient</artifactId>
+        </dependency>
+
+        <!-- 添加 API 模块依赖 -->
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>microservice-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <!-- 添加 build 部分 -->
