--- a/microservice-nacos-user/pom.xml
+++ b/microservice-nacos-user/pom.xml
@@ -40,6 +40,14 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
         </dependency>
+
+        <!-- 添加 API 模块依赖 -->
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>microservice-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <!-- 添加 build 部分 -->
